Based on the work of Stephen Horlander, I've updated the Ubiquity experimental skin to be significantly prettier.

--- a/ubiquity/chrome/skin/skins/experimental.css
+++ b/ubiquity/chrome/skin/skins/experimental.css
@@ -1,8 +1,8 @@
 /*
   =skin=
   
-  @name Ubiquity Experimental
-  @author Aza Raskin
+  @name Ubiquity Evolved
+  @author Stephen Horlander and Aza Raskin
   @homepage http://azarask.in
   @email aza@mozilla.com
   @license MPL/LGPL/GPL
@@ -13,140 +13,159 @@
 
 /* Formatting for the Ubiquity Pop-Up */
 
-
 #cmd-panel {
   padding: 0px;
-  margin: 0px;
-  background: transparent; /* On Mac this is changed to white, due to a rendering bug. */
   width: 800px;
-  opacity: .9;
+  background-color: transparent;
+
+  font-family: Geneva;
+  text-shadow: #AFAFAF 0px 1px .2px;
 }
 
+#cmd-frame{
+  background-color: rgba(43,43,43,1);
+  border: 1px solid #7E7E7E;
+  -moz-border-radius: 10px;
+}
+
+/* The parent of the box for entering text */
 #cmd-entry-container {
   padding-top: 10px;
   padding-bottom: 10px;
-  padding-left: 5px;  
-  border-bottom: 1px solid #CCC;
-  background-color: #878787;
-  font-family: Calibri, Helvetica, Verdana, Arial;
+  padding-left: 5px;
+  -moz-border-radius-topleft: 10px;
+  -moz-border-radius-topright: 10px;
+  border: 1px solid #A6A6A6;
+  border-bottom: 1px solid black;
+  background-color: #999;
+  background-image: url(chrome://ubiquity/skin/icons/cmd_entry_bg.png);
+  background-position: top left;
+  background-repeat: repeat-x;
+
 }
 
+/* Where text is entered */
 #cmd-entry {
   -moz-appearance: none;
-  background: transparent;
+  background: none;
   border: none;
   font-size: 20pt;
   color: black;
   width: 100%;
-  font-family: Calibri, Helvetica, Verdana, Arial;
-}
-
-#cmd-preview {
-  -moz-appearance: none;
-  border: none;
-  overflow: hidden;
-}
-
-
-body#previewbody {
-    margin: 0;
-    padding: 0;
-    color: #BBB;
-    background: transparent;
+  font-family: Geneva;
+  text-shadow: #AFAFAF 0px 1px .2px;
 }
 
 #ubiquity-preview {
-    width: 800px;
-    height: 405px;
+  height: 500px;
+  width: 800px;
+
+  font-family: Geneva;
+  text-shadow: #333 0px 1px .2px;
+  color: #fff;
+
 }
 
-/* Formatting for the Preview box */
 
-div#ubiquity-preview .help {
-  font-family: Calibri, Helvetica, Verdana, Arial;
-  font-size: 11pt;
-  color: black;
-  background-color: #878787;
-  line-height: 15pt;
-  padding: 3px;
-}
-
-div#ubiquity-preview .gresult {
-  margin-bottom: 10px;
+#cmd-preview {
+  -moz-appearance: none;
+  background: none;
+  border: none;
+  overflow: hidden;
+  width: 800px
+  height: 500px;
+  background: none;
 }
 
-div#ubiquity-preview .gresult a {
-  color: #FFFFFF;
-  text-decoration: underline;
-  font-size: 14pt;
-  font-family: Calibri, Helvetica, Verdana, Arial;
-  cursor: pointer;
-}
-div#ubiquity-preview .gresult-url {
-  font-size: x-small;
-  font-family: Calibri, Helvetica, Verdana, Arial;
-  color: #777;
-}
-div#ubiquity-preview .gresult-content {
-  margin-right: 10px;
-  font-family: Calibri, Helvetica, Verdana, Arial;
-  font-size: small;  
-}
-
-div#ubiquity-preview.img {
-    padding: 5px;
-}
-
-/* Formatting for the Preview Pane and Verb/Command suggestion list */
 
 div#ubiquity-preview #suggestions {
   width: 280px;  
-  float: left;
-  background-color: #969696;
-  overflow: hidden;
+  position: absolute;
+  border-left: #232323;
+  top: 0px;
+  left: 0px;
+  -moz-border-radius-bottomleft: 10px;  
+  background-color: rgba(61,61,61,1);
+  background-image: url(chrome://ubiquity/skin/icons/suggestion_bd.png);
+  background-position: top right;
+  background-repeat: repeat-y;
+
+  height: 500px;
 }
 
 div#ubiquity-preview #preview-pane {
+    position: absolute;
+    left: 300px;
+    top: 0px;
+    background: none;
+    //border-left: 1px solid #4E4E4E;
+    height: 500px;
     color: #ffffff;
-    background: #444;
     padding: 5px;
-    padding-left: 10px;
     border-top: 1px solid #333;
-    font-family: Calibri, Helvetica, Verdana, Arial;
+    font-family: Geneva;
+    text-shadow: #000 1px 1px .5px;
     font-size: 11pt;
-    float: left;
-    width: 505px;
-    min-height: 400px;
+    
 } 
-
-
-div#ubiquity-preview .hilited-text { }
-
-div#ubiquity-preview .hilited {
-    border-top: 1px solid #737373;  
-    background-color: #AAA;
-    font-size: 13pt;
-    padding: 5px;  
-    color: #313131;
-    font-family: Calibri, Helvetica, Verdana, Arial;
-    background-image: url(chrome://ubiquity/skin/icons/left_arrow.png);
-    background-position: top right;
-    background-repeat: no-repeat;
-}
-
-div#ubiquity-preview .suggested:first-child{ border: none; }
-div#ubiquity-preview .hilited:first-child{ border: none; }
 
 div#ubiquity-preview .suggested {
     padding: 0px;
-    font-size: 13pt;
+    font-size: 11pt;
     padding: 5px;  
-    border-top: 1px solid #737373;
-    font-family: Calibri, Helvetica, Verdana, Arial;
-    color: #313131;
-    background-color: #969696;
-    max-height: 50px;
+    border: 1px solid rgba(162,162,162,1);;
+    border-right: 1px solid rgba(82,82,82,1);;
+    border-bottom: 1px solid rgba(82,82,82,1);;
+    font-family: Geneva;
+    text-shadow: #AFAFAF 0px 1px .2px;
+
+    color: #000;
+    background-color: rgba(128,128,128,1);
+    min-height: 22px;
     overflow: hidden;
+}
+
+div#ubiquity-preview .hilited {
+    padding: 0px;
+    font-size: 11pt;
+    padding: 5px;
+    border: none;
+    font-family: Geneva;
+    text-shadow: #FFF 0px 1px .2px;
+    margin-right: -30px;
+    padding-right: 30px;
+    z-index: 5000;
+    color: #000;
+    background-image: url(chrome://ubiquity/skin/icons/selected_bg.png);
+    background-position: top left;
+    background-repeat: no-repeat;
+    min-height: 22px;
+    overflow: hidden;
+}
+
+div#ubiquity-preview .cmdicon {
+    display: inline-block;
+    width: 16px;
+}
+div#ubiquity-preview .cmdicon img {
+    vertical-align: middle;
+    width: 16px;
+    height: 16px;
+}
+
+
+
+div#ubiquity-preview .needarg {
+    font-style: oblique;
+    color: #AAA;
+    text-shadow: none;
+    font-size: 80%;
+}
+
+div#ubiquity-preview .hilited .needarg {
+    font-style: oblique;
+    color: #555;
+    font-size: 80%;
 }
 
 div#ubiquity-preview .selection {
@@ -161,19 +180,31 @@ div#ubiquity-preview .selection {
   font-size: 8pt;
   font-weight: normal;
   border: 1px solid #777;
+  text-shadow: none;
 }
 
-div#ubiquity-preview .needarg {
-    font-style: oblique;
-    color: #CACACA;
-    font-size: 70%;
+
+
+/* Formatting for the Preview box */
+
+div#ubiquity-preview .help {
 }
-div#ubiquity-preview .cmdicon {
-    display: inline-block;
-    width: 16px;
+
+div#ubiquity-preview .gresult {
+  margin-bottom: 10px;
 }
-div#ubiquity-preview .cmdicon img {
-    vertical-align: middle;
-    width: 16px;
-    height: 16px;
+
+div#ubiquity-preview .gresult a {
+  color: #FFFFFF;
+  text-decoration: underline;
+  font-size: 14pt;
+  cursor: pointer;
+}
+div#ubiquity-preview .gresult-url {
+  font-size: x-small;
+  color: #777;
+}
+div#ubiquity-preview .gresult-content {
+  margin-right: 10px;
+  font-size: small;  
 }
