--- a/ubiquity/docs/docs.css
+++ b/ubiquity/docs/docs.css
@@ -1,7 +1,7 @@
-html, body {margin: 0; padding: 0;}
 body {
     font-family: palatino, georgia, verdana, arial, sans-serif;
     font-size: 10pt;
+    text-align: center;
 }
 
 .popup-enabled {
@@ -21,7 +21,7 @@ body {
     color: black;
     padding: 3px;
     border: black dotted;
-    border-width: 1px 1px 0 1px;
+    border-width: 1px 1px 0 1px; 
 }
 
 .popup .selected {
@@ -34,39 +34,36 @@ body {
 }
 
 #content {
-    min-width: 1024px;
+    text-align: left;
+    margin: 0 auto;
 }
 
 .documentation {
-    background: white;
     float: left;
     line-height: 1.4em;
 }
 
-.documentation h1, .documentation h2 {
+.documentation h1 {
     font-weight: normal;
     line-height: 1.4em;
 }
 
-.documentation, .code {
-    -moz-box-sizing: padding-box;
-    width: 50%;
-    padding: 0 10px;
-    border-top: 1px dashed black;
-    margin-top: -1px; // hides first top border
+.documentation h2 {
+    font-weight: normal;
+    line-height: 1.4em;
 }
 
 .code {
     font-family: monaco, andale mono, lucidatypewriter, courier,
                  courier new, monospace;
+    float: left;
     white-space: pre;
     font-size: 6pt;
     background-color: #f0f0f0;
-    margin-left: 50%;
 }
 
 .divider {
     clear: both;
     height: 0;
-    line-height: 0;
+    line-height: 0; 
 }
