Synonyms of a command are now listed on the cmdlist page.

--- a/ubiquity/chrome/content/web-content.css
+++ b/ubiquity/chrome/content/web-content.css
@@ -156,6 +156,10 @@ em{
   margin-left: 10px;
   color:#BFBFBF;
 }
+#command-list .synonyms{
+  color: black;
+}
+
 #skin-list .current-skin{
   color: blue;
   font-weight: 800;
