--- a/ubiquity/scripts/docs/docs.css
+++ b/ubiquity/scripts/docs/docs.css
@@ -67,3 +67,14 @@ body {
     height: 0;
     line-height: 0; 
 }
+
+.intra-wiki {
+    color: black;
+    text-decoration: none;
+    border-bottom: solid 1px gray;
+}
+
+a {
+    color: black;
+    text-decoration: underline;
+}
