<pre> blocks in the documentation are now set to the same font and size as the code, so that the same column width of code samples can be displayed in the documentation.
--HG--
extra : rebase_source : 6256b1fdf664f4531a4607e9c80b161ea3b5f4bc

--- a/ubiquity/scripts/docs/docs.css
+++ b/ubiquity/scripts/docs/docs.css
@@ -53,6 +53,13 @@ body {
     line-height: 1.4em;
 }
 
+.documentation pre {
+    font-family: monaco, andale mono, lucidatypewriter, courier,
+                 courier new, monospace;
+    font-size: 6pt;
+    line-height: 1.4em;
+}
+
 .code {
     font-family: monaco, andale mono, lucidatypewriter, courier,
                  courier new, monospace;
