Added an 'unbusy' class to bug report css.

--- a/ubiquity/chrome/content/report-bug.css
+++ b/ubiquity/chrome/content/report-bug.css
@@ -56,12 +56,15 @@ body {
 }
 
 #submit {
-    background-color: #f0f0f0;
     border: none;
     padding: 10px;
 }
 
-#submit:hover {
+.unbusy {
+    background-color: #f0f0f0;
+}
+
+.unbusy:hover {
     background-color: #e0e0e0;
 }
 
