new-parser: updated argFinder to rule out parses with non-empty argStrings and verbs which don't take arguments; added a new step (6): argument normalization. Arg normalization is for languages with articles so they can strip them here. I'll blog about this and document further soon.

--- a/ubiquity/chrome/skin/skins/experimental.css
+++ b/ubiquity/chrome/skin/skins/experimental.css
@@ -110,6 +110,11 @@ div#ubiquity-preview #suggestions .argument {
 div#ubiquity-preview #suggestions .object {
   border-bottom: 2px black solid;
 }
+
+div#ubiquity-preview #suggestions .inactive {
+  color: #666;
+}
+
 /*end Parser 2 version additions*/
 
 div#ubiquity-preview #preview-pane {
