Much more detailed information on live weak references now; also consolidated some memory tracking code.
--HG--
extra : rebase_source : 38f46121bf6b204c4a5687deed7435249957b61d

--- a/ubiquity/jetpack/content/css/index.css
+++ b/ubiquity/jetpack/content/css/index.css
@@ -33,3 +33,12 @@ a {
 .warning .buttony {
     opacity: 0.6;
 }
+
+table {
+    font: inherit;
+}
+
+td {
+    padding-left: 1em;
+    padding-right: 1em;
+}
