Added some links and informative info, plus a help section and a link to show/hide it, at the top of cmdlist.html.

--- a/ubiquity/chrome/content/web-content.css
+++ b/ubiquity/chrome/content/web-content.css
@@ -297,3 +297,10 @@ th {
 td.topcell {
   border-top: 1px solid black;
 }
+
+.ubiq-tutorial {
+  border-style:solid;
+  border-color:green;
+  padding: 2em;
+  font-size: 150%;
+}
