Added a blurb on the about:jetpack page that explains what about:jetpack really is.

--- a/ubiquity/jetpack/content/css/index.css
+++ b/ubiquity/jetpack/content/css/index.css
@@ -51,3 +51,10 @@ td {
 .sample {
     padding-left: 1em;
 }
+
+.sidebar {
+    float: right;
+    background-color: #eeeeee;
+    padding: 0.5em;
+    width: 20em;
+}
