Modified the DOM structure as proposed at #669, adding suggest.html. Made the #ubiquity-preview (parent div of #ubiquity-browser) sync its height with the preview body, aiming to fix #670 (directly changing browser's height had some problems).

--- a/ubiquity/chrome/skin/browser.css
+++ b/ubiquity/chrome/skin/browser.css
@@ -1,4 +1,4 @@
-#transparent-msg-panel {
+#ubiquity-transparent-panel {
   -moz-appearance: none;
   background-color: transparent;
   border-width: 0px;
