--- a/ubiquity/chrome/skin/skins/custom.css
+++ b/ubiquity/chrome/skin/skins/custom.css
@@ -1,160 +1,6 @@
-/*
-  =skin=
-  
-  @name Custom
-  @author You
-  @homepage http://www.yourpage.com
-  @email you@you.com
-  @license MPL/LGPL/GPL
-  
-  =/skin=
-*/
-
-
-/* Formatting for the Ubiquity Pop-Up */
-
-
-#cmd-panel {
-  padding: 0px;
-  margin: 10px;
-  background: rgba(0%, 0%, 0%, 1.0);
-  -moz-border-radius: 20px;
-  -moz-border-radius-topleft: 0px;
-}
-
-#cmd-entry-container {
-  margin: 8px;
-  padding: 3px;
-  font-size: 14pt;
-  border: 0px solid #aaa;
-  -moz-border-radius: 0px;
-  background: transparent;
-  font-family: Calibri, Helvetica, Verdana, Arial;
-}
-
-#cmd-entry {
-  -moz-appearance: none;
-  background: transparent;
-  border: none;
-  font-size: 18pt;
-  color: #ffffff;
-  width: 100%;
-  font-weight: bold;
-  font-family: Calibri, Helvetica, Verdana, Arial;
-}
-
-#cmd-preview {
-  -moz-appearance: none;
-  border: none;
-  margin: 10px;
-  overflow: hidden;
-}
-
-
-body#previewbody {
-    margin: 0;
-    padding: 0;
-    color: #BBB;
-}
-
-#ubiquity-preview {
-    width: 500px;
-}
-
-/* Formatting for the Preview box */
-
-div#ubiquity-preview .help {
-  font-family: Calibri, Helvetica, Verdana, Arial;
-  font-size: 11pt;
-  color: #FFF;
-}
-
-div#ubiquity-preview .gresult {
-  margin-bottom: 10px;
-}
-
-div#ubiquity-preview .gresult a {
-  color: #FFFFFF;
-  text-decoration: underline;
-  font-size: 14pt;
-  font-family: Calibri, Helvetica, Verdana, Arial;
-  cursor: pointer;
-}
-div#ubiquity-preview .gresult-url {
-  font-size: x-small;
-  font-family: Calibri, Helvetica, Verdana, Arial;
-  color: #777;
-}
-div#ubiquity-preview .gresult-content {
-  margin-right: 10px;
-  font-family: Calibri, Helvetica, Verdana, Arial;
-  font-size: small;  
-}
-
-div#ubiquity-preview.img {
-    padding: 5px;
-}
-
-/* Formatting for the Preview Pane and Verb/Command suggestion list */
-
-div#ubiquity-preview #preview-pane {
-    color: #ffffff;
-    background: transparent;
-    padding-left: 15px;
-    padding: 7px;
-    border-top: 1px solid #333;
-    margin-top: 5px;
-    font-family: Calibri, Helvetica, Verdana, Arial;
-    font-size: 11pt;
-} 
-
-
-div#ubiquity-preview .hilited-text {
-    color: #FFF;
-    font-family: Calibri, Helvetica, Verdana, Arial;
-}
-
-div#ubiquity-preview .hilited {
-    padding: 5px;
-    margin: 2px;
-    background: rgba(100%, 100%, 100%, 0.3);
-    -moz-border-radius: 5px;
-    color: #FFF;
-}
-
-
-div#ubiquity-preview .suggested {
-    margin: 2px;
-    padding: 5px;
-    border-left: solid 10px transparent;
-    font-family: Calibri, Helvetica, Verdana, Arial;
-    color: #FFF;
-}
-
-div#ubiquity-preview .needarg {
-    font-style: oblique;
-    color: #999999;
-}
-div#ubiquity-preview .cmdicon {
-    display: inline-block;
-    width: 16px;
-}
-div#ubiquity-preview .cmdicon img {
-    vertical-align: middle;
-    width: 16px;
-    height: 16px;
-}
-
-div#ubiquity-preview .selection {
-  padding: 2px;
-  -moz-border-radius: 3px;
-  display: inline-block;
-  font-variant: small-caps;
-  background-color: #BBB;
-  color: #333;
-  position: relative;
-  top: -2px;
-  font-size: 8pt;
-  font-weight: normal;
-  border: 1px solid #777;
-}
+/*=skin=
+@name   empty
+@author satyr
+=/skin=*/
+/* Use Stylish, maybe? */
+#ubiquity-preview{}
