--- a/ubiquity/jetpack/content/css/index.css
+++ b/ubiquity/jetpack/content/css/index.css
@@ -51,3 +51,13 @@ td {
 .sample {
     padding-left: 1em;
 }
+
+.sidebar {
+    float: right;
+    background-color: #eeeeee;
+    padding-left: 1em;
+    padding-right: 1em;
+    margin-left: 0.5em;
+    margin-bottom: 0.5em;
+    width: 20em;
+}
